# Domain/Entities/Feedback.cs
@@ -1,7 +1,9 @@
 ﻿using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 using System.Text.Json.Serialization;
+using Domain.Helper;
 using Domain.Shared.Enums;
+using PersianDate.Standard;
 
 namespace Domain.Entities
 {
@@ -56,16 +58,16 @@ namespace Domain.Entities
         /// <summary>
         /// تاریخ ارجاع
         /// </summary>
-        public DateTime? ReferralDate { get; set; }
+        public DateTime? ReferralDate { get; set; } = new DateTime(2000, 01, 01);
         /// <summary>
         /// تاریخ برگشت
         /// </summary>
-        public DateTime RespondDate { get; set; }
+        public DateTime RespondDate { get; set; } = new DateTime(2000, 01, 01);
 
         /// <summary>
         /// تاریخ ایجاد
         /// </summary>
-        public DateTime? Created { get; set; }
+        public DateTime Created { get; set; } = new DateTime(2000,01,01);
 
         /// <summary>
         /// وضعیت فیدبک
@@ -101,6 +103,22 @@ namespace Domain.Entities
         public ICollection<Tag>? Tags { get; set; }
 
         public ICollection<Expert>? Experts { get; set; }
+    }
 
+    public class FeedbackReport : Feedback
+    {
+        public string? ProductName { get; set; }
+
+        public string? CustomerName { get; set; }
+
+        public string SourceTranslate => Source.TranslateSource();
+
+        public string StatusTranslate => State.state();
+
+        public string PriortyTranslate => Priorty.TranslatePoriorty();
+
+        public string ReferralDateFa => ReferralDate.ToFa("G");
+
+        public string RespondDateFa => RespondDate.ToFa("G");
     }
 }
